--- a/package.json
+++ b/package.json
@@ -4,6 +4,8 @@
   "description": "Rubik's cube with THREE.js",
   "main": "index.js",
   "scripts": {
+    "start": "webpack-dev-server --mode development --open",
+    "build": "webpack --mode production",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "repository": {
@@ -20,5 +22,23 @@
   "bugs": {
     "url": "https://github.com/Diakov94/rubik-cube/issues"
   },
-  "homepage": "https://github.com/Diakov94/rubik-cube#readme"
+  "homepage": "https://github.com/Diakov94/rubik-cube#readme",
+  "devDependencies": {
+    "@babel/core": "^7.4.4",
+    "@babel/preset-env": "^7.4.4",
+    "babel-loader": "^8.0.5",
+    "eslint": "^5.3.0",
+    "eslint-config-airbnb-base": "^13.1.0",
+    "eslint-loader": "^2.1.2",
+    "eslint-plugin-import": "^2.14.0",
+    "html-loader": "^0.5.5",
+    "html-webpack-plugin": "^3.2.0",
+    "webpack": "^4.30.0",
+    "webpack-cli": "^3.3.1",
+    "webpack-dev-server": "^3.3.1"
+  },
+  "dependencies": {
+    "@tweenjs/tween.js": "^17.3.0",
+    "three": "^0.104.0"
+  }
 }
